# decode_nyc

./: .dockerignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  main.py  pyproject.toml
backend/: env.example  main.py  pyproject.toml  requirements.txt  server.py
backend/api/: __init__.py  friction_report.py
backend/civic_agent/: __init__.py  agent.py  conversation_tool.py  demo_interceptor.py  friction_detector.py  multimodal_agent.py  state.py  storytelling_tool.py
backend/data/: algorithms.json  demo_responses.json  translations_es.json
data/: algorithms.json  test_explain.py
docs/: API.md  ARCHITECTURE.md  DATASET.md  DEMO-FLOW.md  DEPLOYMENT.md  DEVELOPMENT.md  GOOGLE-SOLUTIONS.md  INTEGRATION.md  PRIVACY.md  QUICKSTART.md  README.md  REFERENCE.md  SETUP.md  USAGE.md  UV-WORKSPACE.md
frontend/: agent.html  app.js  audio-player.js  audio-recorder.js  chat.js  flowchart-display.js  index.html  pcm-player-processor.js  pcm-recorder-processor.js  style.css  translations.js  updatedapp.py
scripts/: deploy.sh  gcp-setup.sh  test-docker.sh
specs/: algorithm_explained_spec.md
